Added video tag

--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 
         <article>
             <!-- PHONE AND FILM-->
-            <section id="phone">
+            <section id="phone-video">
                 <!-- Put code here -->
-
+                <video loop autoplay muted>
+                    <source src="resources/media/excursion.mp4" type="video/mp4" />
+                    Your browser does not support the video tag.
+                </video>
             </section>
 
             <!-- TRAVEL GUIDE SECTION -->
