--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <header>
-            <h1>Discorver hidden places in the world around you</h1>
+            <h1>Discover hidden places in the world around you</h1>
             <a href="#">Download Excusion (Coming soon!)</a>
         </header>
 
